<?xml version="1.0" encoding="utf-8"?>
<!--
    ~ Copyright 2023 Alexey Odinokov. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">SetGame Solver</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maximum detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing confidence threshold
        button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing confidence threshold
        button</string>
    <string name="alt_bottom_sheet_iou_threshold_button_minus">Decreasing intersection over union
        threshold button</string>
    <string name="alt_bottom_sheet_iou_threshold_button_plus">Increasing intersection over union
        threshold button</string>

    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_startstop_btn_start">Start</string>
    <string name="label_startstop_btn_stop">Stop</string>

    <string name="label_resolution_btn">Resolution</string>
    <string name="label_freeze_btn">Freeze</string>
    <string name="label_unfreeze_btn">Unfreeze</string>

    <string name="label_modes">Mode</string>
    <string name="label_det_confidence_threshold">Det threshold</string>
    <string name="label_det_expected_results_num">Det expected obj num</string>
    <string name="label_class_confidence_threshold">Class threshold</string>
    <string name="label_intersection_over_union_threshold">IoU threshold</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>
    <string name="label_cameras">Camera</string>
    <string name="label_resolutions">Resolution</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>SetGame</item>
        <item>SetGame det dbg</item>
    </string-array>

    <string-array name="modes_spinner_titles">
        <item>All sets</item>
        <item>Max non-overlapping sets</item>
    </string-array>

    <string name="label_camera_auto">Auto</string>
    <string name="label_resolution_max">Max</string>
    <string name="label_resolution_recommended">Recommended</string>

    <string name="label_card_value">Card value</string>
    <string name="label_create_btn">Create</string>
    <string name="label_update_btn">Update</string>
    <string name="label_delete_btn">Delete</string>
    <string name="label_ok_btn">OK</string>
    <string name="label_cancel_btn">Cancel</string>

    <!-- don't change the order -->
    <string-array name="camera_select_facing">
        <item>Back</item>
        <item>Front</item>
        <!--item>External</item-->
    </string-array>

    <string name="label_camera_permission_title">Permissions needed</string>
    <string name="label_camera_permission_why">This app needs access to your camera to be able to detect SET cards and find sets</string>
    <string name="label_camera_permission_granted">Permission request granted</string>
    <string name="label_camera_permission_denied">Permission request denied</string>

</resources>
