<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/resolution_dialog_background"
    android:padding="@dimen/resolution_dialog_padding">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Camera selection row -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cameras"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textColor="@color/bottom_sheet_text_color"
            android:textSize="@dimen/resolution_dialog_text_size" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/camera_spinner_min_width"
            android:minHeight="@dimen/camera_spinner_min_height"
            android:spinnerMode="dropdown"
            android:theme="@style/BottomSheetSpinnerItemStyle"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <!-- Camera selection row -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">

        <TextView
            android:text="@string/label_resolutions"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/resolution_dialog_text_size"
            android:textColor="@color/bottom_sheet_text_color" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/resolution_spinner_min_width"
            android:minHeight="@dimen/resolution_spinner_min_height"
            android:spinnerMode="dropdown"
            android:theme="@style/BottomSheetSpinnerItemStyle"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bottom_sheet_default_row_margin"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/okay_text"
                android:layout_width="@dimen/resolution_dialog_buttons_width"
                android:layout_height="wrap_content"
                android:text="@string/label_ok_btn" />
            <Button
                android:id="@+id/cancel_text"
                android:layout_width="@dimen/resolution_dialog_buttons_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text = "@string/label_cancel_btn" />

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>