<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/resolution_dialog_background"
    android:padding="@dimen/resolution_dialog_padding">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text= "@string/label_card_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bottom_sheet_text_size"
            android:textColor="@color/bottom_sheet_text_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/minus_fill"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/minus_count"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/plus_shape"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/minus_color"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"/>

                <ImageView
                    android:id="@+id/current"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/plus_color"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/minus_shape"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/plus_count"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/plus_fill"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"/>

            </TableRow>
        </TableLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/update_text"
                android:layout_width="@dimen/resolution_dialog_buttons_width"
                android:layout_height="wrap_content"
                android:text="@string/label_update_btn" />

            <Button
                android:id="@+id/delete_text"
                android:layout_width="@dimen/resolution_dialog_buttons_width"
                android:layout_height="wrap_content"
                android:text="@string/label_delete_btn"
                android:gravity="center"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/cancel_text"
                android:layout_width="@dimen/resolution_dialog_buttons_width"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text = "@string/label_cancel_btn" />

        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>